updated new keys