@@ -1,6 +1,7 @@
 package com.smsaware.utils;
 
 import java.security.Key;
+import java.util.Base64;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
@@ -15,21 +16,25 @@ public class AESCryptUtil {
 			'K', 'e', 'y' };
 
 	public static String encrypt(String Data) throws Exception {
-		Key key = generateKey();
+		/*Key key = generateKey();
 		Cipher c = Cipher.getInstance(ALGO);
 		c.init(Cipher.ENCRYPT_MODE, key);
 		byte[] encVal = c.doFinal(Data.getBytes());
-		String encryptedValue = new BASE64Encoder().encode(encVal);
-		return encryptedValue;
+		String encryptedValue = new BASE64Encoder().encode(encVal);*/
+		
+		String base64encodedString = Base64.getEncoder().encodeToString(Data.getBytes("utf-8"));
+		return base64encodedString;
 	}
 
 	public static String decrypt(String encryptedData) throws Exception {
-		Key key = generateKey();
+		/*Key key = generateKey();
 		Cipher c = Cipher.getInstance(ALGO);
 		c.init(Cipher.DECRYPT_MODE, key);
 		byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedData);
 		byte[] decValue = c.doFinal(decordedValue);
-		String decryptedValue = new String(decValue);
+		String decryptedValue = new String(decValue);*/
+		byte[] base64decodedBytes = Base64.getDecoder().decode(encryptedData);
+		String decryptedValue = new String(base64decodedBytes, "utf-8");
 		return decryptedValue;
 	}
 
